# amplifier-module-hook-shell

./: LICENSE  README.md  SPEC.md  pyproject.toml
amplifier_hooks_shell/: __init__.py  bridge.py  executor.py  loader.py  matcher.py  translator.py
amplifier_module_hook_shell/: __init__.py  bridge.py
amplifier_module_hooks_shell/: __init__.py  bridge.py  executor.py  loader.py  matcher.py  translator.py
behaviors/: hook-shell.yaml
examples/hooks/auto-formatter/: README.md  format.sh  hooks.json
examples/hooks/bash-validator/: README.md  hooks.json  validate.sh
examples/hooks/linter/: README.md  hooks.json  lint.py
tests/: TEST_RESULTS.md  test_bridge.py  test_executor.py  test_loader.py  test_matcher.py  test_translator.py
tests/bundles/: test-all-hooks.md  test-formatters.md  test-linters.md  test-logging.md  test-security.md
tests/hooks/command-logger/: hooks.json  log-result.sh  log.sh
tests/hooks/file-guard/: guard.sh  hooks.json
tests/hooks/js-formatter/: format.sh  hooks.json
tests/hooks/js-linter/: hooks.json  lint.sh
tests/hooks/python-formatter/: format.sh  hooks.json
tests/hooks/python-linter/: hooks.json  lint.sh
tests/settings/: test-settings-minimal.yaml  test-settings-security-only.yaml  test-settings.yaml
