[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-module-hooks-shell"
version = "0.1.0"
description = "Bridge module to execute Claude Code-compatible hooks in Amplifier"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Brian Krabach", email = "robotdad@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/robotdad/amplifier-module-hooks-shell"
Repository = "https://github.com/robotdad/amplifier-module-hooks-shell"
Documentation = "https://github.com/robotdad/amplifier-module-hooks-shell/blob/main/SPEC.md"

[project.entry-points."amplifier.modules"]
hooks-shell = "amplifier_module_hooks_shell:mount"

[tool.setuptools.packages.find]
include = ["amplifier_module_hooks_shell*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=amplifier_module_hooks_shell --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
